create: mobile responsive for header

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </button>
           </form>
 
-          <a href="#" class="user">
+          <a href="#" class="user navbar__user">
             <img
               src="img/user-avatar.jpeg"
               alt="Avatar: Nathan"
@@ -42,6 +42,11 @@
             <span class="user__name">Nathan</span>
           </a>
           <!-- /.user -->
+          <button class="menu-button navbar-top__menu-button">
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+          </button>
         </div>
         <!-- /.navbar-top -->
       </div>
@@ -73,6 +78,7 @@
           </ul>
           <!-- /.navbar-menu -->
         </div>
+        <!-- /.container -->
       </div>
       <!-- /.navbar-bottom -->
     </header>
