--- a/index.html
+++ b/index.html
@@ -129,26 +129,46 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper-container">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/slide.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-2.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-2.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-3.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-3.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-4.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-4.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide-5.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__image"
+                    src="img/slide-5.jpg"
+                    alt="slide"
+                  />
                 </div>
               </div>
 
@@ -200,7 +220,12 @@
             </div>
             <!-- /.booking -->
             <div class="map">
-              
+              <iframe
+                src="https://yandex.ru/map-widget/v1/?um=constructor%3Afa9434271837a07c5063cb7d28d2273ef914da370bfb2b072f58ae452116f5fc&amp;source=constructor"
+                width="100%"
+                height="213"
+                frameborder="0"
+              ></iframe>
             </div>
             <!-- /.map -->
           </div>
