fix: fixbag-script

--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="viewport"
-      content="initial-scale=1.0, user-scalable=no, maximum-scale=1"
-    />
     <title>Best Tour Plan - Hotel Booking</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Muli:wght@400;700&family=Nunito:wght@400;600;700&display=swap"
@@ -15,9 +11,7 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script
-      src="https://api-maps.yandex.ru/2.1/?apikey=ce43402d-1239-4981-8065-853a294bd32c&lang=ru_RU"
-      type="text/javascript"
-    ></script>
+      src="https://api-maps.yandex.ru/2.1/?apikey=ce43402d-1239-4981-8065-853a294bd32c&lang=ru_RU"></script>
   </head>
   <body>
     <header class="navbar">
@@ -181,8 +175,8 @@
               </div>
 
               <!-- If we need navigation buttons -->
-              <button class="slider-button slider-button--prev"></button>
-              <button class="slider-button slider-button--next"></button>
+              <button class="slider-button slider-button__prev"></button>
+              <button class="slider-button slider-button__next"></button>
             </div>
             <!-- /.swiper-container -->
           </div>
