--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
               </div>
 
               <!-- If we need navigation buttons -->
-              <button class="slider-button slider-button__prev"></button>
-              <button class="slider-button slider-button__next"></button>
+              <button class="slider-button slider-button_prev"></button>
+              <button class="slider-button slider-button_next"></button>
             </div>
             <!-- /.swiper-container -->
           </div>
