--- a/index.html
+++ b/index.html
@@ -130,56 +130,57 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider hotel__slider">
-            <!-- Slider main container -->
-            <div class="swiper-container">
-              <!-- Additional required wrapper -->
-              <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide.jpg"
-                    alt="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-2.jpg"
-                    alt="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-3.jpg"
-                    alt="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-4.jpg"
-                    alt="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__image"
-                    src="img/slide-5.jpg"
-                    alt="slide"
-                  />
-                </div>
+          <!-- Slider main container -->
+          <div class="swiper-container hotel-slider hotel__slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide.jpg"
+                  alt="slide"
+                />
               </div>
-
-              <!-- If we need navigation buttons -->
-              <button class="slider-button slider-button_prev"></button>
-              <button class="slider-button slider-button_next"></button>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-2.jpg"
+                  alt="slide"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-3.jpg"
+                  alt="slide"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-4.jpg"
+                  alt="slide"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__image"
+                  src="img/slide-5.jpg"
+                  alt="slide"
+                />
+              </div>
             </div>
-            <!-- /.swiper-container -->
+
+            <!-- If we need navigation buttons -->
+            <button
+              class="hotel-slider__button hotel-slider__button_prev"
+            ></button>
+            <button
+              class="hotel-slider__button hotel-slider__button_next"
+            ></button>
           </div>
-          <!-- /.slider -->
+          <!-- /.swiper-container -->
           <div class="hotel-right">
             <div class="booking">
               <div class="booking__info">
@@ -245,6 +246,112 @@
         </form>
       </div>
       <!-- /.newsletter-wrapper -->
+    </section>
+    <section class="reviews">
+      <div class="container">
+        <h2 class="reviews__title">What people thinks about us</h2>
+        <div class="swiper-container reviews-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar.jpeg"
+                    alt="Photo: Megan Fox"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Megan Fox</h3>
+                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar-1.jpeg"
+                    alt="Photo: Julia Fanienko"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Julia Fanienko</h3>
+                  <span class="reviews-slider__date">Stayed 11 Sep, 2017</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda sunt totam laudantium laboriosam eaque veniam obcaecati rem, ipsam quidem corrupti reiciendis ullam numquam, fugit consequuntur? Autem non fugiat quas dicta.Dolore, autem, ab aut provident dolorem asperiores minima odio nihil fuga doloribus placeat. Delectus consequuntur magnam fugit placeat quasi ea aperiam dolorum vitae, similique sequi molestias, exercitationem optio dolores atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente vero fugiat illo tenetur. Animi, recusandae quia. Praesentium unde optio eligendi! Ea sequi incidunt aspernatur, suscipit reprehenderit aliquam numquam sed ex odio molestiae iusto quidem doloremque dolorum, soluta explicabo ab, harum itaque totam dolores nemo dicta eveniet alias nam ipsa. Error praesentium quos labore natus nesciunt dolor. Temporibus iusto molestias aut consectetur facere deserunt labore, aperiam dicta praesentium repellendus asperiores in! 
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+            
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar-2.jpeg"
+                    alt="Photo: Paulo Smitch"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__username">Paulo Smitch</h3>
+                  <span class="reviews-slider__date">Stayed 1 Jan, 2013</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" />
+                    <img src="img/star.svg" alt="star" />
+                  </div>
+                  <!-- /.reviews-slider__rating -->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolores eos, mollitia impedit, optio, similique sed perspiciatis itaque quos eligendi error sunt? Neque quasi dolor ipsa repellendus. Doloribus, cumque nisi.
+                </p>
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!-- /.swiper-slide -->
+          </div>
+          <!-- /.swiper-wrapper -->
+
+          <button
+            class="reviews-slider__button reviews-slider__button_prev"
+          ></button>
+          <button
+            class="reviews-slider__button reviews-slider__button_next"
+          ></button>
+        </div>
+        <!-- /.reviews-slider -->
+      </div>
+      <!-- /.container -->
     </section>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/app.js"></script>
