fix: fixed hotel-slide-image & responsible

--- a/index.html
+++ b/index.html
@@ -137,35 +137,35 @@
               <!-- Slides -->
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="img/slide.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="img/slide-2.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="img/slide-3.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="img/slide-4.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__image"
+                  class="hotel-slider__image"
                   src="img/slide-5.jpg"
                   alt="slide"
                 />
