create: added paralax & responsible

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       </div>
       <!-- /.container -->
     </section>
-    <section class="newsletter">
+    <section class="newsletter" data-parallax="scroll" data-image-src="img/newsletter-bg.jpeg">
       <div class="newsletter-wrapper">
         <h2 class="newsletter-title newsletter__title">
           subscribe to our
@@ -354,6 +354,8 @@
       <!-- /.container -->
     </section>
     <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
