create: added activities section & responsible

--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@
       </div>
       <!-- /.container -->
     </section>
-    <section class="newsletter" data-parallax="scroll" data-image-src="img/newsletter-bg.jpeg">
+    <section
+      class="newsletter"
+      data-parallax="scroll"
+      data-image-src="img/newsletter-bg.jpeg"
+    >
       <div class="newsletter-wrapper">
         <h2 class="newsletter-title newsletter__title">
           subscribe to our
@@ -287,7 +291,7 @@
               <!-- /.reviews-slider__item -->
             </div>
             <!-- /.swiper-slide -->
-            
+
             <div class="swiper-slide">
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
@@ -308,13 +312,29 @@
                 </div>
                 <!-- /.reviews-slider__profile -->
                 <p class="reviews-slider__text">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda sunt totam laudantium laboriosam eaque veniam obcaecati rem, ipsam quidem corrupti reiciendis ullam numquam, fugit consequuntur? Autem non fugiat quas dicta.Dolore, autem, ab aut provident dolorem asperiores minima odio nihil fuga doloribus placeat. Delectus consequuntur magnam fugit placeat quasi ea aperiam dolorum vitae, similique sequi molestias, exercitationem optio dolores atque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente vero fugiat illo tenetur. Animi, recusandae quia. Praesentium unde optio eligendi! Ea sequi incidunt aspernatur, suscipit reprehenderit aliquam numquam sed ex odio molestiae iusto quidem doloremque dolorum, soluta explicabo ab, harum itaque totam dolores nemo dicta eveniet alias nam ipsa. Error praesentium quos labore natus nesciunt dolor. Temporibus iusto molestias aut consectetur facere deserunt labore, aperiam dicta praesentium repellendus asperiores in! 
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Assumenda sunt totam laudantium laboriosam eaque veniam
+                  obcaecati rem, ipsam quidem corrupti reiciendis ullam numquam,
+                  fugit consequuntur? Autem non fugiat quas dicta.Dolore, autem,
+                  ab aut provident dolorem asperiores minima odio nihil fuga
+                  doloribus placeat. Delectus consequuntur magnam fugit placeat
+                  quasi ea aperiam dolorum vitae, similique sequi molestias,
+                  exercitationem optio dolores atque! Lorem ipsum dolor sit amet
+                  consectetur adipisicing elit. Sapiente vero fugiat illo
+                  tenetur. Animi, recusandae quia. Praesentium unde optio
+                  eligendi! Ea sequi incidunt aspernatur, suscipit reprehenderit
+                  aliquam numquam sed ex odio molestiae iusto quidem doloremque
+                  dolorum, soluta explicabo ab, harum itaque totam dolores nemo
+                  dicta eveniet alias nam ipsa. Error praesentium quos labore
+                  natus nesciunt dolor. Temporibus iusto molestias aut
+                  consectetur facere deserunt labore, aperiam dicta praesentium
+                  repellendus asperiores in!
                 </p>
               </div>
               <!-- /.reviews-slider__item -->
             </div>
             <!-- /.swiper-slide -->
-            
+
             <div class="swiper-slide">
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
@@ -333,7 +353,10 @@
                 </div>
                 <!-- /.reviews-slider__profile -->
                 <p class="reviews-slider__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam dolores eos, mollitia impedit, optio, similique sed perspiciatis itaque quos eligendi error sunt? Neque quasi dolor ipsa repellendus. Doloribus, cumque nisi.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Laboriosam dolores eos, mollitia impedit, optio, similique sed
+                  perspiciatis itaque quos eligendi error sunt? Neque quasi
+                  dolor ipsa repellendus. Doloribus, cumque nisi.
                 </p>
               </div>
               <!-- /.reviews-slider__item -->
@@ -350,6 +373,55 @@
           ></button>
         </div>
         <!-- /.reviews-slider -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <section class="activities">
+      <div class="container">
+        <h2 class="activities__title">Other Activities</h2>
+        <div class="activities-wrapper">
+          <div class="card activities__card">
+            <img
+              src="img/activity-1.jpg"
+              alt="The curious corner of chamarel"
+              class="card__image"
+            />
+            <h3 class="card__title">The curious corner of chamarel</h3>
+            <button class="card__button">Book Now</button>
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img
+              src="img/activity-2.jpg"
+              alt="Gymkhana club golf course"
+              class="card__image"
+            />
+            <h3 class="card__title">Gymkhana club golf course</h3>
+            <button class="card__button">Book Now</button>
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img
+              src="img/activity-3.jpg"
+              alt="Tamarind falls hiking trip - full day"
+              class="card__image"
+            />
+            <h3 class="card__title">Tamarind falls hiking trip - full day</h3>
+            <button class="card__button">Book Now</button>
+          </div>
+          <!-- /.card -->
+          <div class="card activities__card">
+            <img
+              src="img/activity-4.jpg"
+              alt="The blue marine discovery quest"
+              class="card__image"
+            />
+            <h3 class="card__title">The blue marine discovery quest</h3>
+            <button class="card__button">Book Now</button>
+          </div>
+          <!-- /.card -->
+        </div>
+        <!-- /.activities-wrapper -->
       </div>
       <!-- /.container -->
     </section>
