--- a/index.html
+++ b/index.html
@@ -587,7 +587,21 @@
             </form>
           </div>
           <!-- /.footer__contact-form -->
-          
+          <div class="footer-bottom">
+            <ul class="footer-bottom__ul">
+              <li class="footer-bottom__item">
+                <a href="#" class="footer-bottom__link">Disclaimer</a>
+              </li>
+              <li class="footer-bottom__item">
+                <a href="#" class="footer-bottom__link">Conditions of use</a>
+              </li>
+              <li class="footer-bottom__item">
+                <a href="#" class="footer-bottom__link">Cancellation policy</a>
+              </li>
+            </ul>
+            <img class="footer-bottom__image" src="img/paypal.jpg" alt="Image: paypal" />
+          </div>
+          <!-- /.footer-bottom -->
         </div>
         <!-- /.footer-wrapper -->
       </div>
