create: added footer-bottom

--- a/index.html
+++ b/index.html
@@ -587,7 +587,10 @@
             </form>
           </div>
           <!-- /.footer__contact-form -->
-          <div class="footer-bottom">
+        </div>
+        <!-- /.footer-wrapper -->
+        <div class="footer-bottom">
+          <div class="footer-bottom__leftside">
             <ul class="footer-bottom__ul">
               <li class="footer-bottom__item">
                 <a href="#" class="footer-bottom__link">Disclaimer</a>
@@ -599,11 +602,48 @@
                 <a href="#" class="footer-bottom__link">Cancellation policy</a>
               </li>
             </ul>
-            <img class="footer-bottom__image" src="img/paypal.jpg" alt="Image: paypal" />
           </div>
-          <!-- /.footer-bottom -->
+          <div class="footer-bottom__rightside">
+            <ul class="footer-bottom__ul_r">
+              <li class="footer-bottom__image_item">
+                <img
+                  src="img/cards/card-1.png"
+                  alt="icon: paypal"
+                  class="footer-bottom__image"
+                />
+              </li>
+              <li class="footer-bottom__image_item">
+                <img
+                  src="img/cards/card-2.png"
+                  alt="icon: paypal"
+                  class="footer-bottom__image"
+                />
+              </li>
+              <li class="footer-bottom__image_item">
+                <img
+                  src="img/cards/card-3.png"
+                  alt="icon: paypal"
+                  class="footer-bottom__image"
+                />
+              </li>
+              <li class="footer-bottom__image_item">
+                <img
+                  src="img/cards/card-4.png"
+                  alt="icon: paypal"
+                  class="footer-bottom__image"
+                />
+              </li>
+              <li class="footer-bottom__image_item">
+                <img
+                  src="img/cards/card-5.png"
+                  alt="icon: paypal"
+                  class="footer-bottom__image"
+                />
+              </li>
+            </ul>
+          </div>
         </div>
-        <!-- /.footer-wrapper -->
+        <!-- /.footer-bottom -->
       </div>
     </footer>
     <script src="js/swiper-bundle.min.js"></script>
