fix: i hate css grid

--- a/index.html
+++ b/index.html
@@ -591,53 +591,53 @@
         <!-- /.footer-wrapper -->
         <div class="footer-bottom">
           <div class="footer-bottom__leftside">
-            <ul class="footer-bottom__ul">
-              <li class="footer-bottom__item">
-                <a href="#" class="footer-bottom__link">Disclaimer</a>
+            <ul class="ul-links">
+              <li class="ul-links__item">
+                <a href="#" class="ul-links__link">Disclaimer</a>
               </li>
-              <li class="footer-bottom__item">
-                <a href="#" class="footer-bottom__link">Conditions of use</a>
+              <li class="ul-links__item">
+                <a href="#" class="ul-links__link">Conditions of use</a>
               </li>
-              <li class="footer-bottom__item">
-                <a href="#" class="footer-bottom__link">Cancellation policy</a>
+              <li class="ul-links__item">
+                <a href="#" class="ul-links__link">Cancellation policy</a>
               </li>
             </ul>
           </div>
           <div class="footer-bottom__rightside">
-            <ul class="footer-bottom__ul_r">
-              <li class="footer-bottom__image_item">
+            <ul class="ul-images">
+              <li class="ul-images__item">
                 <img
                   src="img/cards/card-1.png"
-                  alt="icon: paypal"
-                  class="footer-bottom__image"
+                  alt="icon: amex"
+                  class="ul-images__image"
                 />
               </li>
-              <li class="footer-bottom__image_item">
+              <li class="ul-images__item">
                 <img
                   src="img/cards/card-2.png"
-                  alt="icon: paypal"
-                  class="footer-bottom__image"
+                  alt="icon: applypay"
+                  class="ul-images__image"
                 />
               </li>
-              <li class="footer-bottom__image_item">
+              <li class="ul-images__item">
                 <img
                   src="img/cards/card-3.png"
-                  alt="icon: paypal"
-                  class="footer-bottom__image"
+                  alt="icon: amazone"
+                  class="ul-images__image"
                 />
               </li>
-              <li class="footer-bottom__image_item">
+              <li class="ul-images__item">
                 <img
                   src="img/cards/card-4.png"
                   alt="icon: paypal"
-                  class="footer-bottom__image"
+                  class="ul-images__image"
                 />
               </li>
-              <li class="footer-bottom__image_item">
+              <li class="ul-images__item">
                 <img
                   src="img/cards/card-5.png"
-                  alt="icon: paypal"
-                  class="footer-bottom__image"
+                  alt="icon: mastercard"
+                  class="ul-images__image"
                 />
               </li>
             </ul>
