fix: i hate css gridx2

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 <div class="footer__icon-wrapper">
                   <img
                     class="footer__icon"
-                    src="img/map-maker.svg"
+                    src="img/map-marker.svg"
                     alt="Icon: map-maker"
                   />
                 </div>
@@ -556,7 +556,7 @@
                 <div class="footer__icon-wrapper">
                   <img
                     class="footer__icon"
-                    src="img/message.svg"
+                    src="img/email-message.svg"
                     alt="Icon: message"
                   />
                 </div>
