--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </h2>
         <form action="send.php" method="POST" class="subscribe newsletter__subscribe">
           <input
-            type="hidden"
+            type="text"
             class="subscribe__input"
             placeholder="Your email address"
             name="sendemail"
