create: added 2 form

--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
             type="text"
             class="subscribe__input"
             placeholder="Your email address"
-            name="sendemail"
+            name="email"
           />
-          <button class="subscribe__button" type="submit">Send</button>
+          <button class="subscribe__button" name="submit_1" type="submit">Send</button>
         </form>
       </div>
       <!-- /.newsletter-wrapper -->
@@ -614,7 +614,7 @@
                 placeholder="Message"
                 name="message"
               ></textarea>
-              <button class="button footer__button" type="submit">Send</button>
+              <button name="submit_2" class="button footer__button" type="submit">Send</button>
               <span class="footer__info">* Required Fields</span>
             </form>
           </div>
