fix: fixed media

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
         <!-- /.footer-bottom -->
       </div>
     </footer>
-    <div class="modal">
+    <div class="modal" id="modal_id">
       <div class="modal__overlay"></div>
       <!-- /.modal__overlay -->
       <div class="modal__dialog">
