create: add validate script

--- a/index.html
+++ b/index.html
@@ -734,9 +734,10 @@
       <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
-    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/parallax.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
