create: added validate-form

--- a/index.html
+++ b/index.html
@@ -274,13 +274,14 @@
         <form
           action="send.php"
           method="POST"
-          class="subscribe newsletter__subscribe"
+          class="subscribe newsletter__subscribe form"
         >
           <input
-            type="text"
+            type="email"
             class="subscribe__input"
             placeholder="Your email address"
             name="email"
+            required
           />
           <button class="subscribe__button" name="submit_1" type="submit">
             Send
@@ -605,19 +606,25 @@
           <!-- /.footer__contact-details -->
           <div class="footer__contact-form">
             <h3 class="footer__title footer__title_mb_3">Send us a message</h3>
-            <form action="send.php" method="POST" class="footer__form">
-              <input
+            <form action="send.php" method="POST" class="footer__form form">
+              <div class="footer__input_group">
+                <input
                 type="text"
                 class="input footer__input"
                 placeholder="Your Full Name*"
                 name="name"
+                required
               />
-              <input
-                type="text"
+              </div>
+              <div class="footer__input_group">
+                <input
+                type="tel"
                 class="input footer__input"
                 placeholder="Phone Number*"
                 name="phone"
+                required
               />
+              </div>
               <textarea
                 class="message footer__message"
                 placeholder="Message"
@@ -701,24 +708,27 @@
           <img src="img/close.svg" alt="Icon: close" />
         </a>
         <h3 class="modal__title modal__title_mb_3">Booking</h3>
-        <form action="send.php" method="POST" class="modal__form">
+        <form action="send.php" method="POST" class="modal__form form">
           <input
             type="text"
             class="input modal__input"
             placeholder="Your Full Name*"
             name="name"
+            required
           />
           <input
-            type="text"
+            type="tel"
             class="input modal__input"
             placeholder="Phone Number*"
             name="phone"
+            required
           />
           <input
-            type="text"
+            type="email"
             class="input modal__input"
             placeholder="Email*"
             name="mail"
+            required
           />
           <textarea
             class="message modal__message"
